examples/kyverno/cluster-policy-require-image-signature.yml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-signature
spec:
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
  - name: verify-image-provider-nexus
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - ghcr.io/a1994sc/crossplane/provider-nexus:*
      attestors:
      - entries:
        - keyless:
            subject: "https://github.com/a1994sc/provider-nexus/.github/workflows/ci.yml@refs/tags/*"
            issuer: https://token.actions.githubusercontent.com
            rekor:
              url: https://rekor.sigstore.dev
      mutateDigest: false
      verifyDigest: false
